--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -41,7 +41,7 @@ body {
 
   li {
     display: inline-block;
-    margin: 5px;
+    margin: .5em;
 
     > * {
       font-size: 1.5rem;
@@ -64,6 +64,112 @@ body {
     input {
       text-align: left;
       width: 6em;
+    }
+    .slider-wrapper {
+      //background:#eb6c5b;
+      border:1px solid #353535;
+      padding:20px;
+    }
+    input[type="range"]{
+      -webkit-appearance: none;
+      width: 100%;
+      height: 8px;
+      outline: none !important;
+      appearance:none;
+      border:none;
+      border-radius:30px;
+    }
+    input[type="range"]::-moz-focus-outer {
+      border: 0;
+    }
+    input[type="range"]:hover {
+      outline:none;
+    }
+
+    /* Chrome */
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 9px;
+      height: 9px;
+      background: #1d9aee;
+      cursor: pointer;
+      border-radius:30px;
+      outline:none;
+    }
+
+    /* Moz */
+
+    input[type="range"]::-moz-range-thumb {
+      width: 18px;
+      height: 18px;
+      background:  #1d9aee;
+      cursor: pointer;
+      border-radius:50%;
+      border:none;
+      outline:none;
+    }
+    input[type="range"]::-moz-range-progress {
+      background-color: #1d9aee;
+      height: 100%;
+      border-radius:30px;
+      border:none;
+    }
+    input[type="range"]::-moz-range-track {
+      background-color: #1d9aee;
+      border-radius:30px;
+      border:none;
+      height: 100%;
+    }
+
+    /* IE*/
+
+    input[type="range"]::-ms-fill-lower {
+      background-color: #1d9aee;
+      height: 100%;
+      border-radius:30px;
+      border:none;
+    }
+    input[type="range"]::-ms-fill-upper {
+      background-color:#1d9aee;
+      border-radius:1.5em;
+      border:none;
+      height: 100%;
+    }
+
+    /* tooltip style */
+    .tooltip {
+      position:relative;
+      padding:1.5rem 0;
+      border:none;
+      .tooltiptext {
+        visibility: hidden;
+        width: 30%;
+        font-size: .8em;
+        color: #5d5c5c;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+        position: absolute;
+        z-index: 1;
+        top:-5px;
+        left:calc(50% - 30%/2);
+        &::after {
+          content: "";
+          position: absolute;
+          top: 100%;
+          left: 50%;
+          margin-left: -5px;
+          border-width: 5px;
+          border-style: solid;
+          border-color: #5d5c5c transparent transparent transparent;
+        }
+      }
+      &:hover .tooltiptext {
+        border:1px solid #5d5c5c;
+        visibility: visible;
+      }
     }
   }
 }
