Изменен структура приложения.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,27 +1,25 @@
-$baseCellDiameter: calc(.5em + 1.8vh);
+$baseCellDiameter: calc(0.5em + 1.8vh);
 $color-baseCell: #917155;
 $color-aliveCell: #7ad37a;
 $color-newAliveCell: #e0d3bf;
 $color-newDeadCell: #720707;
 $bg-color: #eee;
 $color: #4aecaa;
-
+$thumb-color: #1d9aee;
 
 :root {
   box-sizing: border-box;
-  font-size: calc(.5em + 1vw);
+  font-size: calc(0.5em + 1vw);
 }
 
-*, :before, :after {
+*,
+:before,
+:after {
   box-sizing: inherit;
 }
 
 body {
   height: 100vh;
-
-  * + * {
-    //margin-top:1.5em
-  }
 }
 
 .header {
@@ -41,18 +39,19 @@ body {
 
   li {
     display: inline-block;
-    margin: .5em;
+    margin: 0.5em;
 
     > * {
+      width: 6em;
       font-size: 1.5rem;
-      padding: .5em 1.5em;
+      padding: 0.5rem 1.5rem;
       border: 2px solid $color;
-      border-radius: .5em;
+      border-radius: 0.5em;
       font-weight: 300;
     }
 
     button {
-      background-color: rgba(255, 255, 255, .6);
+      background-color: rgba(255, 255, 255, 0.6);
       outline: none;
       cursor: pointer;
 
@@ -65,25 +64,27 @@ body {
       text-align: left;
       width: 6em;
     }
-    .slider-wrapper {
-      //background:#eb6c5b;
-      border:1px solid #353535;
-      padding:20px;
-    }
-    input[type="range"]{
+  }
+
+  .slider-wrapper {
+    padding: 0 0.5em;
+
+    input[type="range"] {
       -webkit-appearance: none;
       width: 100%;
       height: 8px;
       outline: none !important;
-      appearance:none;
-      border:none;
-      border-radius:30px;
+      appearance: none;
+      border: none;
+      border-radius: 30px;
     }
+
     input[type="range"]::-moz-focus-outer {
       border: 0;
     }
+
     input[type="range"]:hover {
-      outline:none;
+      outline: none;
     }
 
     /* Chrome */
@@ -93,10 +94,10 @@ body {
       appearance: none;
       width: 9px;
       height: 9px;
-      background: #1d9aee;
+      background: $thumb-color;
       cursor: pointer;
-      border-radius:30px;
-      outline:none;
+      border-radius: 30px;
+      outline: none;
     }
 
     /* Moz */
@@ -104,57 +105,61 @@ body {
     input[type="range"]::-moz-range-thumb {
       width: 18px;
       height: 18px;
-      background:  #1d9aee;
+      background: $thumb-color;
       cursor: pointer;
-      border-radius:50%;
-      border:none;
-      outline:none;
+      border-radius: 50%;
+      border: none;
+      outline: none;
     }
+
     input[type="range"]::-moz-range-progress {
-      background-color: #1d9aee;
+      background-color: $thumb-color;
       height: 100%;
-      border-radius:30px;
-      border:none;
+      border-radius: 30px;
+      border: none;
     }
+
     input[type="range"]::-moz-range-track {
-      background-color: #1d9aee;
-      border-radius:30px;
-      border:none;
+      background-color: $thumb-color;
+      border-radius: 30px;
+      border: none;
       height: 100%;
     }
 
     /* IE*/
 
     input[type="range"]::-ms-fill-lower {
-      background-color: #1d9aee;
+      background-color: $thumb-color;
       height: 100%;
-      border-radius:30px;
-      border:none;
+      border-radius: 30px;
+      border: none;
     }
+
     input[type="range"]::-ms-fill-upper {
-      background-color:#1d9aee;
-      border-radius:1.5em;
-      border:none;
+      background-color: $thumb-color;
+      border-radius: 1.5em;
+      border: none;
       height: 100%;
     }
 
-    /* tooltip style */
     .tooltip {
-      position:relative;
-      padding:1.5rem 0;
-      border:none;
+      position: relative;
+      padding: 1.5rem 0;
+      border: none;
+
       .tooltiptext {
         visibility: hidden;
         width: 30%;
-        font-size: .8em;
+        font-size: 0.8em;
         color: #5d5c5c;
         text-align: center;
         padding: 5px 0;
         border-radius: 6px;
         position: absolute;
         z-index: 1;
-        top:-5px;
-        left:calc(50% - 30%/2);
+        top: -5px;
+        left: calc(50% - 30% / 2);
+
         &::after {
           content: "";
           position: absolute;
@@ -163,11 +168,12 @@ body {
           margin-left: -5px;
           border-width: 5px;
           border-style: solid;
-          border-color: #5d5c5c transparent transparent transparent;
+          border-color: $color transparent transparent transparent;
         }
       }
+
       &:hover .tooltiptext {
-        border:1px solid #5d5c5c;
+        border: 1px solid $color;
         visibility: visible;
       }
     }
@@ -206,19 +212,19 @@ body {
 }
 
 .c {
-  border: 2px solid rgba(25, 25, 25, .8);
+  border: 2px solid rgba(25, 25, 25, 0.8);
   border-radius: 45%;
   background-color: $color-baseCell;
   min-width: $baseCellDiameter;
   min-height: $baseCellDiameter;
   width: $baseCellDiameter;
   height: $baseCellDiameter;
-  opacity: .8;
+  opacity: 0.8;
   overflow: hidden;
   margin: 0;
   padding: 0;
   position: relative;
-  transition: opacity .1s ease, transform .15s ease-out;
+  transition: opacity 0.1s ease, transform 0.15s ease-out;
 
   &:not(:target) {
     height: 100%;
@@ -237,7 +243,7 @@ body {
     display: block;
     height: 30%;
     left: 50%;
-    opacity: .6;
+    opacity: 0.6;
     position: absolute;
     transform: translate(-55%, -45%);
     top: 50%;
@@ -252,8 +258,8 @@ body {
     background: $color-aliveCell;
 
     &:hover {
-      transform: scaleX(.9) scaleY(.6);
-      animation: wiggleCell .8s infinite;
+      transform: scaleX(0.9) scaleY(0.6);
+      animation: wiggleCell 0.8s infinite;
       will-change: opacity;
     }
   }
@@ -268,44 +274,44 @@ body {
 }
 
 .c1 {
-  transform: scale(.95) skewX(-4deg);
+  transform: scale(0.95) skewX(-4deg);
 
   &:before {
     height: 40%;
-    opacity: .5;
+    opacity: 0.5;
     transform: translate(-40%, -30%);
     width: 30%;
   }
 }
 
 .c2 {
-  transform: scale(.88);
+  transform: scale(0.88);
 
   &:before {
     height: 20%;
-    opacity: .8;
+    opacity: 0.8;
     transform: translate(-70%, -30%);
     width: 30%;
   }
 }
 
 .c3 {
-  transform: scale(.95) skewY(2deg);
+  transform: scale(0.95) skewY(2deg);
 
   &:before {
     height: 50%;
-    opacity: .4;
+    opacity: 0.4;
     transform: skewY(10deg) translate(-20%, -70%);
     width: 40%;
   }
 }
 
 .c4 {
-  transform: scale(.9) skewX(3deg);
+  transform: scale(0.9) skewX(3deg);
 
   &:before {
     height: 35%;
-    opacity: .5;
+    opacity: 0.5;
     transform: translate(-15%, -55%);
     width: 45%;
   }
@@ -324,19 +330,18 @@ body {
     transform: scale(1) rotate(0);
   }
   20% {
-    transform: scale(.95) rotate(4deg);
+    transform: scale(0.95) rotate(4deg);
   }
   40% {
-    transform: scale(.97) rotate(-8deg);
+    transform: scale(0.97) rotate(-8deg);
   }
   60% {
-    transform: scale(.99) rotate(2deg);
+    transform: scale(0.99) rotate(2deg);
   }
   80% {
-    transform: scale(.94) rotate(-5deg);
+    transform: scale(0.94) rotate(-5deg);
   }
   100% {
     transform: scale(1) rotate(0);
   }
 }
-
