--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -71,6 +71,7 @@ body {
 
     input[type="range"] {
       -webkit-appearance: none;
+      background: $thumb-color;
       width: 100%;
       height: 8px;
       outline: none !important;
